force-app/main/default/objects/TributoIPI__c/TributoIPI__c.object-meta.xml
<CustomObject>
    <label>Tributo IPI</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tributos IPI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>