force-app/main/default/objects/TributoIPI__c/fields/CodigoTributoIPI__c.field-meta.xml
<CustomField>
    <fullName>CodigoTributoIPI__c</fullName>
    <externalId>true</externalId>
    <label>Código Tributo IPI</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>