force-app/main/default/objects/TributoIPI__c/fields/NaturezaOperacao__c.field-meta.xml
<CustomField>
    <fullName>NaturezaOperacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natureza de Operação</label>
    <referenceTo>NaturezaOperacao__c</referenceTo>
    <relationshipLabel>Tributos IPI</relationshipLabel>
    <relationshipName>TributosIPI</relationshipName>
    <type>Lookup</type>
</CustomField>