force-app/main/default/objects/TributoIPI__c/fields/PercentualAliquota__c.field-meta.xml
<CustomField>
    <fullName>PercentualAliquota__c</fullName>
    <label>Percentual da Alíquota</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>